--- a/inventarios/inventarios/staticfiles/templates/html/app/list-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-entradas.html
@@ -9,6 +9,9 @@
             <h4 class="mb-3">Listado de Entradas</h4>
             <p class="mb-0"> Listado de Entradas registrados en plataforma </p>
         </div>
+        <button data-table-id="suppliersTable" class="btn btn-success btnExportar">
+            <i class="fas fa-file-excel"></i> Exportar datos a Excel
+        </button>
         <a href="{% url 'add_entradas' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir</a>
     </div>
 </div>
