--- a/inventarios/inventarios/staticfiles/templates/html/app/list-insumos.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-insumos.html
@@ -31,7 +31,6 @@
                     <td>{{ insumo.unidad_medida.nombre }}</td>
                     <td>{{ insumo.codigo_contable }}</td>
                     <td>{{ insumo.certificacion.registro_ica }}</td>
-                    <!--<td></td>  Grupo parece no estar en la respuesta de la API -->
                     <td>
                         <div class="d-flex align-items-center list-action">
                             <a class="badge badge-info mr-2" data-toggle="modal" data-title="Información del Insumo" data-target="#exampleModalCenteredScrollable{{ insumo.id }}" data-html="true" title="Información del Insumo" href="#"><i class="ri-eye-line mr-0"></i>Información del Insumo</a>
@@ -43,26 +42,29 @@
                 {% endfor %}
             </tbody>
         </table>
-        <div id="avisomodal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalCenteredScrollableTitle"
-        style="display: none;" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Aviso</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body-aviso" style="text-align: center;">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        
+       
+        
+</div>
+
+<div id="avisomodal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalCenteredScrollableTitle"
+            style="display: none;" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Aviso</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                    </div>
+                    <div class="modal-body-aviso" style="text-align: center;">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    </div>
-</div>
 
 <!-- Modal -->
 {% for insumo in insumos %}
@@ -140,13 +142,24 @@
                         return response.json();
                     })
                     .then(certificacion => {
+                        fetch(`/insumos/editar/unidad/${insumo.unidad_medida}/`, {
+                            headers: {
+                                'Authorization': `Bearer ${accessToken}`
+                            }
+                        })
+                            .then(response => {
+                                if (!response.ok) {
+                                    throw new Error("Error en la respuesta del servidor");
+                                }
+                                return response.json();
+                            })
+                            .then(unidad => {
 
                 tr.innerHTML = `
                     <td>${insumo.nombre}</td>
-                    <td>${insumo.unidad_medida}</td>
+                    <td>${unidad.nombre}</td>
                     <td>${insumo.codigo_contable}</td>
                     <td>${certificacion.registro_ica}</td>
-                    <td></td> <!-- Grupo parece no estar en la respuesta de la API -->
                     <td>
                         <div class="d-flex align-items-center list-action">
                             <a class="badge badge-info mr-2" data-toggle="modal" data-title="Información del Usuario" data-html="true" title="Información de Usuario" data-target="#exampleModalCenteredScrollable${insumo.id}" href="#"><i class="ri-eye-line mr-0"></i></a>
@@ -156,7 +169,7 @@
                     </td>`;
 
                 tbody.appendChild(tr);
-            });});
+            });});});
 
             $('[data-toggle="popover"]').popover();
 
