--- a/inventarios/staticfiles/templates/html/app/add-insumo.html
+++ b/inventarios/staticfiles/templates/html/app/add-insumo.html
@@ -57,9 +57,9 @@
                         <div class="form-group">
                             <label>Grupo de Insumos * </label>
                             <select name="type" class="selectpicker form-control" data-style="py-0">
-                                
-                                <option>Agroquimicos</option>
-                                <option>Corrosivos</option>
+                                {% for grupo in grupos %}
+                                <option value="{{grupo.id}}">{{grupo.nombre}}</option>
+                                {% endfor %}
                             </select>
                         </div>
                     </div>              
