fix(table entradas inicial)

--- a/inventarios/inventarios/staticfiles/templates/html/app/list-entradas-inicial.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-entradas-inicial.html
@@ -6,7 +6,7 @@
 <div class="col-lg-12">
     <div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
         <div>
-            <h4 class="mb-3">Listado de Entradas</h4>
+            <h4 class="mb-3">Listado de estado inicial de Entradas</h4>
             <p class="mb-0"> Listado de Entradas registrados en plataforma </p>
         </div>
         <a href="{% url 'add_entradas' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir</a>
