--- a/inventarios/inventarios/staticfiles/templates/html/app/add-certificacion.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-certificacion.html
@@ -39,7 +39,7 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label>Ingrediente Activo</label>
-                            <select name="type" class="selectpicker form-control" data-style="py-0" id="ingrediente" name="ingrediente">
+                            <select name="type" class="form-control" data-style="py-0" id="ingrediente" name="ingrediente">
                                 
                                 {% for ingrediente in ingredientes %}
                                 <option value="{{ ingrediente.id }}" >{{ ingrediente.nombre }}</option>
