--- a/inventarios/inventarios/staticfiles/templates/html/app/add-insumo.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-insumo.html
@@ -20,7 +20,7 @@
                         <div class="form-group">
                             
                             <label>Unidad de Medida * </label>
-                            <select name="type" class="selectpicker form-control" data-style="py-0" id="unidad" name="unidad">
+                            <select name="type" class="form-control" data-style="py-0" id="unidad" name="unidad">
                                 {% for unidad in unidades_medida %}
                                 <option value="{{ unidad.id }}" >{{ unidad.nombre }}</option>
                                 {% endfor%}
@@ -46,7 +46,7 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label>Certificación * </label>
-                            <select name="type" class="selectpicker form-control" data-style="py-0" id="certificacion" name="certificacion">
+                            <select name="type" class="form-control" data-style="py-0" id="certificacion" name="certificacion">
                                 {%for certificacion in certificaciones%}
                                 <option value="{{ certificacion.id }}" >{{ certificacion.registro_ica }}</option>
                                 {% endfor%}
@@ -56,7 +56,7 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label>Grupo de Insumos * </label>
-                            <select name="type" class="selectpicker form-control" data-style="py-0">
+                            <select name="type" class="form-control" data-style="py-0">
                                 {% for grupo in grupos %}
                                 <option value="{{grupo.id}}">{{grupo.nombre}}</option>
                                 {% endfor %}
