--- a/inventarios/inventarios/staticfiles/templates/html/app/list-certificacion.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-certificacion.html
@@ -2,11 +2,23 @@
 {% load static %}
 {% block body %}
 
+<style>
+    .modal-backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1041;
+        width: 0;
+        height: 100vh;
+        background-color: #000;
+    }
+    
+</style>
 
 <div class="col-lg-12">
     <div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
         <div>
-            <h4 class="mb-3">Listado de Certificaciones</h4>
+            <h4 class="mb-3">Listado de Certificaciones </h4>
             <p class="mb-0"> </p>
         </div>
         <a href="{% url 'add_certificacion' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir
@@ -55,9 +67,9 @@
             </div>
         </div>
         {% endfor %}
-        </div>
-        </div>
-<!--Modal de Avisos-->
+    </div>
+</div>
+
 <div id="avisomodal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalCenteredScrollableTitle"
     style="display: none;" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
@@ -76,6 +88,7 @@
         </div>
     </div>
 </div>
+
 
 
 <script>
