--- a/inventarios/inventarios/staticfiles/templates/html/app/list-proveedor.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-proveedor.html
@@ -1,7 +1,18 @@
 {% extends "./todo.html" %}
 {% load static %}
 {% block body %}
-
+<style>
+    .modal-backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1041;
+        width: 0;
+        height: 100vh;
+        background-color: #000;
+    }
+    
+</style>
 
 <div class="col-lg-12">
     <div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
@@ -49,7 +60,12 @@
         </tbody>
     </table>
 
-    <div id="avisomodal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalCenteredScrollableTitle"
+    
+    </div>
+</div>
+
+
+<div id="avisomodal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalCenteredScrollableTitle"
         style="display: none;" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -67,8 +83,6 @@
             </div>
         </div>
     </div>
-    </div>
-</div>
 
 
 <script>
