--- a/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-salidas.html
@@ -1,6 +1,7 @@
 {% extends "./todo.html" %}
 {% load static %}
 {% block body %}
+{% load humanize %}
 
 
 <div class="col-lg-12">
@@ -9,12 +10,15 @@
             <h4 class="mb-3">Listado de Salidas</h4>
             <p class="mb-0"> Listado de Entradas registrados en plataforma </p>
         </div>
+        <button data-table-id="exitsTable" class="btn btn-success btnExportar">
+            <i class="fas fa-file-excel"></i> Exportar datos a Excel
+        </button>
         <a href="{% url 'add_salidas' %}" class="btn btn-primary add-list"><i class="las la-plus mr-3"></i>Añadir</a>
     </div>
 </div>
 <div class="col-lg-12">
     <div class="table-responsive rounded mb-3">
-        <table class="data-table table mb-0 tbl-server-info" id="suppliersTable">
+        <table class="data-table table mb-0 tbl-server-info" id="exitsTable">
             <thead class="bg-white text-uppercase">
                 <tr class="ligth ligth-data">
                     <th>Fecha de Salida</th>
@@ -31,7 +35,7 @@
                     <td>{{salida.fecha_salida|date:"j \d\e F \d\e Y" }}</td>
                     <td>{{salida.insumo}}</td>
                     <td>{{salida.cantidad}}</td>
-                    <td>{{salida.valor_total_salida}}</td>                
+                    <td>$ {{salida.valor_total_salida |floatformat:2|intcomma}}</td>                
                     <td>
                         <div class="d-flex align-items-center list-action">
                             <a class="badge badge-info mr-2" data-toggle="modal" data-title="Información de la Bodega" data-content="Nombre: {{ bodega.nombre_bodega }}" data-html="true" title="Información de Bodega" href="#" data-target="#exampleModalCenteredScrollable{{salida.pk}}"><i class="ri-eye-line mr-0"></i></a>
