--- a/inventarios/inventarios/staticfiles/templates/html/app/todo.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/todo.html
@@ -269,7 +269,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light p-0">
                     <div class="iq-navbar-logo d-flex align-items-center justify-content-between">
                         <i class="ri-menu-line wrapper-menu"></i>
-                        <a href="../backend/index.html" class="header-logo">
+                        <a href="#" class="header-logo">
                             <img src="{% static '/assets/images/logo_ottsa.svg' %}" class="img-fluid rounded-normal"
                                 alt="logo">
                             <h5 class="logo-title ml-3">Invetarios Ottsa</h5>
@@ -600,6 +600,35 @@
             });
         });
 
+    </script>
+
+    <script>
+        function formatCurrency(input) {
+            // Obtener el valor ingresado por el usuario
+            let value = input.value;
+    
+            // Eliminar cualquier caracter que no sea un número o un punto decimal
+            value = value.replace(/[^0-9.]/g, '');
+    
+            // Dividir la parte entera y la parte decimal
+            let parts = value.split('.');
+            let integerPart = parts[0];
+            let decimalPart = parts.length > 1 ? '.' + parts[1] : '';
+    
+            // Agregar comas cada tres dígitos en la parte entera
+            integerPart = integerPart.replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+    
+            // Formatear el valor con comas, puntos y comillas
+            let formattedValue = '$ ' + integerPart + decimalPart ;
+    
+            // Asignar el valor formateado al input
+            input.value = formattedValue;
+        }
+    
+        
+    
+    
+    
     </script>
 </body>
 
